--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
-    background-color: lightseagreen;
+    background-color: #ffa333;
     color: white;
 }
 
@@ -80,7 +80,7 @@ li p {
 
 .btn-delete:hover {
     cursor: pointer;
-    background-color: lightseagreen;
+    background-color: #ffa333;
 }
 
 .btn-add {
@@ -88,14 +88,14 @@ li p {
     border: none;
     color: white;
     font-family: fantasy;
-    background-color: teal;
+    background-color: #e48200;
     font-size: 1.4rem;
     outline: none;
 }
 
 .btn-add:hover {
     cursor: pointer;
-    background-color: darkcyan;
+    background-color: #d27300;
 }
 
 .empty {
